--- a/yatzy.html
+++ b/yatzy.html
@@ -261,7 +261,7 @@
                 </div>
             </div>
 
-            <p id="whosTurn"></p>
+            <p id="whosTurn">jk</p>
 
             <div class="col-lg-3 col-md-12 col-sm-12 players">
                 <div class="row">
