--- a/yatzy.html
+++ b/yatzy.html
@@ -265,9 +265,9 @@
             <div>
 
                 <ol>
-                    <li>Spelare: Poäng:</li>
-                    <li>Spelare: Poäng:</li>
-                    <li>Spelare: Poäng:</li>
+                    <li id = "firstPlace"></li>
+                    <li id = "secondPlace"></li>
+                    <li id = "thirdPlace"></li>
                 </ol>
 
             </div>
